# VisualizeInputing

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  VisualizeInputing
3rdpty/: CMakeLists.txt
3rdpty/sources/: CMakeLists.txt
3rdpty/sources/cmake/: ConcurrentQueue.cmake  GLFW.cmake  ImGui.cmake  ImPlot.cmake  InputListener.cmake
assets/shader/: fragment.glsl  vertex.glsl
docs/: linux-global-input.md
src/: main.cpp
src/app/: AppLoop.cpp  AppLoop.h  Application.cpp  Application.h
src/cpp/: Caller.cpp  KeyWidget.cpp  MouseWidget.cpp  main.cpp
src/cpp/lsr/: GlobalKeyListener.cpp  GlobalMouseListener.cpp
src/gls/: glcore.h  shader.cpp  shader.h  texture.h
src/gls/glfws/: windowcore.cpp  windowcore.h
src/gls/glfws/linux/: lglwindow.cpp  lglwindow.h
src/gls/glfws/macos/: mglwindow.cpp  mglwindow.h
src/headers/: AlignType.h  Caller.h  KeyWidget.h  MouseWidget.h
src/headers/lsr/: GlobalKeyListener.h  GlobalMouseListener.h
src/imgui/: ImGuiLayer.cpp  ImGuiLayer.h
src/input/: GlobalInputListener.cpp  GlobalInputListener.h  InputState.cpp  InputState.h
src/platform/: NativeWindow.cpp  NativeWindow.h
src/ui/: MainUi.cpp  MainUi.h
